{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 37,
  "lineage": "193e3bb3-5b49-16d5-8f3d-9fde8e52cf65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0041771075899dcd6",
            "arn": "arn:aws:ec2:us-west-2:878154666921:elastic-ip/eipalloc-0041771075899dcd6",
            "domain": "vpc",
            "id": "eipalloc-0041771075899dcd6",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-233-136-200.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.136.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:internet-gateway/igw-0cbcd395f9c44361a",
            "id": "igw-0cbcd395f9c44361a",
            "owner_id": "878154666921",
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:878154666921:loadbalancer/app/cs6650-hw7-alb/3e7bd848ce3da9a9",
            "arn_suffix": "app/cs6650-hw7-alb/3e7bd848ce3da9a9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cs6650-hw7-alb-565891770.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:878154666921:loadbalancer/app/cs6650-hw7-alb/3e7bd848ce3da9a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cs6650-hw7-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06ea869e5fbd726e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0466076a3d34ed8ca"
              },
              {
                "subnet_id": "subnet-06572bb6fc8bfcb62"
              }
            ],
            "subnets": [
              "subnet-0466076a3d34ed8ca",
              "subnet-06572bb6fc8bfcb62"
            ],
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:878154666921:listener/app/cs6650-hw7-alb/3e7bd848ce3da9a9/cd8fae504a7c2b86",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:878154666921:targetgroup/cs6650-hw7-api-tg/97c6599061ada638",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:878154666921:listener/app/cs6650-hw7-alb/3e7bd848ce3da9a9/cd8fae504a7c2b86",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:878154666921:loadbalancer/app/cs6650-hw7-alb/3e7bd848ce3da9a9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:878154666921:targetgroup/cs6650-hw7-api-tg/97c6599061ada638",
            "arn_suffix": "targetgroup/cs6650-hw7-api-tg/97c6599061ada638",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:878154666921:targetgroup/cs6650-hw7-api-tg/97c6599061ada638",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-hw7-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0041771075899dcd6",
            "association_id": "eipassoc-0e1c6225ed3314b82",
            "connectivity_type": "public",
            "id": "nat-05f915e96d79b59dc",
            "network_interface_id": "eni-0d70857a3f9d82619",
            "private_ip": "10.0.1.236",
            "public_ip": "44.233.136.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0466076a3d34ed8ca",
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0545b9f2f33d999741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f915e96d79b59dc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0545b9f2f33d99974",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cbcd395f9c44361a",
            "id": "r-rtb-0ac619baefcc1ccbe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac619baefcc1ccbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:route-table/rtb-0545b9f2f33d99974",
            "id": "rtb-0545b9f2f33d99974",
            "owner_id": "878154666921",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ac8db109691489"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:route-table/rtb-0ac619baefcc1ccbe",
            "id": "rtb-0ac619baefcc1ccbe",
            "owner_id": "878154666921",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ac8db109691489"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e38895bd6f8ecea2",
            "route_table_id": "rtb-0545b9f2f33d99974",
            "subnet_id": "subnet-0496639b8e47477f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077d013b330628b45",
            "route_table_id": "rtb-0545b9f2f33d99974",
            "subnet_id": "subnet-0dd31d27a125abfd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e84b6adadd07f79a",
            "route_table_id": "rtb-0ac619baefcc1ccbe",
            "subnet_id": "subnet-0466076a3d34ed8ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4ec4375b08cf2f8",
            "route_table_id": "rtb-0ac619baefcc1ccbe",
            "subnet_id": "subnet-06572bb6fc8bfcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:security-group/sg-06ea869e5fbd726e7",
            "description": "ALB ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ea869e5fbd726e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cs6650-hw7-alb-sg",
            "name_prefix": "",
            "owner_id": "878154666921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ac8db109691489"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:security-group/sg-042721fe5f3a9d709",
            "description": "ECS task ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042721fe5f3a9d709",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ea869e5fbd726e7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cs6650-hw7-ecs-sg",
            "name_prefix": "",
            "owner_id": "878154666921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ac8db109691489"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:subnet/subnet-0496639b8e47477f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496639b8e47477f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878154666921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs6650-hw7-private-a",
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Name": "cs6650-hw7-private-a",
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:subnet/subnet-0dd31d27a125abfd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd31d27a125abfd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878154666921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs6650-hw7-private-b",
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Name": "cs6650-hw7-private-b",
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:subnet/subnet-0466076a3d34ed8ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0466076a3d34ed8ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878154666921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs6650-hw7-public-a",
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Name": "cs6650-hw7-public-a",
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:subnet/subnet-06572bb6fc8bfcb62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06572bb6fc8bfcb62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878154666921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs6650-hw7-public-b",
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Name": "cs6650-hw7-public-b",
              "Project": "cs6650-hw7"
            },
            "vpc_id": "vpc-099ac8db109691489"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:878154666921:vpc/vpc-099ac8db109691489",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a40c70dbfad19a1c",
            "default_route_table_id": "rtb-082269593d9080536",
            "default_security_group_id": "sg-0aaff57fab438bb10",
            "dhcp_options_id": "dopt-0e022bdd829cae3ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099ac8db109691489",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082269593d9080536",
            "owner_id": "878154666921",
            "tags": {
              "Project": "cs6650-hw7"
            },
            "tags_all": {
              "Project": "cs6650-hw7"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}